--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
@@ -21,26 +21,19 @@
          </columnConstraints>
          <rowConstraints>
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="40.0" minHeight="35.0" prefHeight="40.0" vgrow="NEVER" />
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
             <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="Query3" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="query2" mnemonicParsing="false" onAction="#executeQuery2" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button fx:id="query1" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="2" />
-            <TextArea fx:id="test" editable="false" GridPane.columnSpan="5" GridPane.rowIndex="3" />
-            <Label text="%lbl.query1" GridPane.columnSpan="2147483647">
+            <Button fx:id="Query3" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Button fx:id="query1" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="3" />
+            <TextArea fx:id="test" editable="false" GridPane.columnSpan="5" GridPane.rowIndex="2" />
+            <Label text="%lbl.query1" wrapText="true" GridPane.columnSpan="2147483647">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="10.0" layoutY="17.0" text="label" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Label layoutX="10.0" layoutY="47.0" text="%lbl.query3" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+            <Label layoutX="10.0" layoutY="47.0" text="%lbl.query3" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
