--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ExpandOntology.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ExpandOntology.fxml
@@ -7,19 +7,21 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.ExpandOntologyController">
+<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.ExpandOntologyController">
    <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <GridPane prefHeight="800.0" prefWidth="1000.0" styleClass="pane" stylesheets="@style1.css">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Button fx:id="btnProtege" mnemonicParsing="false" onAction="#openProtege" prefHeight="46.0" prefWidth="233.0" style="-fx-font-size: 15;" stylesheets="@TestStyle.css" text="IOM-Ontologie in Protégé öffnen" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Button fx:id="btnProtege" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#openProtege" prefHeight="46.0" prefWidth="233.0" style="-fx-font-size: 15;" stylesheets="@TestStyle.css" text="IOM-Ontologie in Protégé öffnen" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="23.0" />
                </font>
