--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
@@ -1,6 +1,7 @@
 .text-field {
    	-fx-background-color: #f2f2f2;
     -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+    -fx-font-size: 15px;
 }
 
 
@@ -51,6 +52,7 @@
     -fx-background-insets: 0 0 -1 0, 0, 1, 2;
     -fx-background-radius: 3px, 3px, 2px, 1px;
     -fx-text-fill: -fx-text-base-color;
+    -fx-font-size: 15px;
 }
 
 .combo-box .list-cell:hover{
