--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -11,8 +12,10 @@
 
 <BorderPane styleClass="pane" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.QueryController">
    <top>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane styleClass="pane" stylesheets="@style1.css" BorderPane.alignment="CENTER">
          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -25,18 +28,33 @@
             <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="Query3" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <Button fx:id="query1" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="3" />
-            <TextArea fx:id="test" editable="false" GridPane.columnSpan="5" GridPane.rowIndex="2" />
+            <Button fx:id="Query3" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin></Button>
+            <Button fx:id="query1" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin></Button>
+            <TextArea fx:id="test" editable="false" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin></TextArea>
             <Label text="%lbl.query1" wrapText="true" GridPane.columnSpan="2147483647">
                <font>
                   <Font size="15.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="8.0" right="8.0" />
+               </GridPane.margin>
             </Label>
             <Label layoutX="10.0" layoutY="47.0" text="%lbl.query3" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="8.0" right="8.0" />
+               </GridPane.margin>
             </Label>
          </children>
       </GridPane>
