--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
@@ -10,9 +10,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
+
 <BorderPane styleClass="pane" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.QueryController">
    <top>
-      <GridPane styleClass="pane" stylesheets="@style1.css" BorderPane.alignment="CENTER">
+      <GridPane styleClass="pane" stylesheets="@style1.css">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,20 +27,28 @@
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
             <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="240.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="529.0" minHeight="10.0" prefHeight="26.532928466796875" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <Button fx:id="Query3" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="8.0" />
-               </GridPane.margin></Button>
+               </GridPane.margin>
+            </Button>
             <Button fx:id="query1" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5">
                <GridPane.margin>
                   <Insets left="8.0" />
-               </GridPane.margin></Button>
+               </GridPane.margin>
+            </Button>
             <TextArea fx:id="test" editable="false" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="8.0" />
-               </GridPane.margin></TextArea>
+               </GridPane.margin>
+            </TextArea>
             <Label text="%lbl.query1" wrapText="true" GridPane.columnSpan="2147483647">
                <font>
                   <Font size="15.0" />
@@ -56,6 +65,14 @@
                   <Insets left="8.0" right="8.0" />
                </GridPane.margin>
             </Label>
+            <TextArea fx:id="inputQuery" prefHeight="150.0" prefWidth="500.0" GridPane.columnSpan="5" GridPane.rowIndex="5" />
+            <Label text="%lbl.createOwnQuery" GridPane.columnSpan="3" GridPane.rowIndex="4">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="ownQuery" alignment="CENTER_RIGHT" layoutX="518.0" layoutY="56.0" mnemonicParsing="false" onAction="#executeOwnQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
+            <TextArea fx:id="ownQueryResult" editable="false" layoutX="18.0" layoutY="90.0" prefHeight="165.0" prefWidth="500.0" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="7" />
          </children>
       </GridPane>
    </top>
