--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Settings.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Settings.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" styleClass="pane" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.SettingsController">
    <center>
       <GridPane styleClass="pane" stylesheets="@style1.css" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="155.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="468.0" minWidth="10.0" prefWidth="347.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.7913818359375" minWidth="10.0" prefWidth="306.7913818359375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="468.0" minWidth="10.0" prefWidth="365.2086181640625" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="445.0" minWidth="10.0" prefWidth="243.0" />
         </columnConstraints>
         <rowConstraints>
@@ -24,26 +22,13 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Sprache:" GridPane.halignment="CENTER">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <HBox alignment="CENTER" prefHeight="267.0" prefWidth="530.0" GridPane.columnIndex="1">
                <children>
-                  <RadioButton fx:id="rbGerman" mnemonicParsing="false" onAction="#setGerman" text="Deutsch">
+                  <Button fx:id="btnUserManual" mnemonicParsing="false" onAction="#openUserManual" text="Benutzerhandbuch öffnen">
                      <HBox.margin>
-                        <Insets right="30.0" />
+                        <Insets />
                      </HBox.margin>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton fx:id="rbEnglish" mnemonicParsing="false" onAction="#setEnglish" text="Englisch">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </RadioButton>
+                  </Button>
                </children>
             </HBox>
          </children>
